Adds base CSS for demos

--- a/components/avatar/index.html
+++ b/components/avatar/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans">
   <link rel="stylesheet" href="../../base/normalize.css">
   <link rel="stylesheet" href="../../base/skeleton.css">
+  <link rel="stylesheet" href="../../base/site.css">
   <link rel="stylesheet" href="../../base/main.css">
 
   <link rel="stylesheet" href="avatar.css">
@@ -15,7 +16,16 @@
 </head>
 <body>
 
-  <img class="avatar" src="https://avatars2.githubusercontent.com/u/398893?s=96" width="48" height="48" alt="Zeno Rocha">
+  <div class="container">
+    <div class="card shadow">
+      <h3 class="card-title">Avatar</h3>
+      <p class="card-description">Make sure you load an image twice the size in order to guarantee high quality on retina displays.</p>
+      <div class="card-demo">
+        <img class="avatar" src="sample.jpg" width="48" height="48" alt="Zeno Rocha">
+      </div>
+      <pre class="card-pre"><code class="card-code">&lt;img class="avatar" src="sample.jpg" width="48" height="48" alt="Zeno Rocha"&gt;</code></pre>
+    </div>
+  </div>
 
 </body>
 </html>
