Renames avatar filename

--- a/components/avatar/index.html
+++ b/components/avatar/index.html
@@ -21,9 +21,9 @@
       <h3 class="card-title">Avatar</h3>
       <p class="card-description">Make sure you load an image twice the size in order to guarantee high quality on retina displays.</p>
       <div class="card-demo">
-        <img class="avatar" src="sample.jpg" width="48" height="48" alt="Zeno Rocha">
+        <img class="avatar" src="user.jpg" width="48" height="48" alt="Zeno Rocha">
       </div>
-      <pre class="card-pre"><code class="card-code">&lt;img class="avatar" src="sample.jpg" width="48" height="48" alt="Zeno Rocha"&gt;</code></pre>
+      <pre class="card-pre"><code class="card-code">&lt;img class="avatar" src="user.jpg" width="48" height="48" alt="Zeno Rocha"&gt;</code></pre>
     </div>
   </div>
 
