Reorganizes files and folders

--- a/src/public/docs/styles/main.css
+++ b/src/public/docs/styles/main.css
@@ -33,7 +33,7 @@
 }
 
 .page-card-code {
-  background: #fff;
+  background: #f8f8f8;
   border-radius: 0;
   border: 0;
   font-family: 'Monaco', 'Menlo', 'Consolas', 'Courier New', monospace;
