Adds disabled anchor/button

--- a/src/public/styles/button.scss
+++ b/src/public/styles/button.scss
@@ -1,25 +1,32 @@
+/* Primary
+   ========================================================================== */
+
+$bgColor   : #1c6de2;
+$textColor : #fff;
+$height    : 3.2rem;
+
 .btn,
 button,
 input[type="submit"],
 input[type="reset"],
 input[type="button"] {
-  background-color: #1c6de2;
+  background-color: $bgColor;
   border-radius: 0.2rem;
   border: none;
   box-sizing: border-box;
-  color: #fff;
+  color: $textColor;
   cursor: pointer;
   display: inline-block;
   font-size: 1.2rem;
   font-weight: 300;
-  height: 3.2rem;
-  line-height: 3.2rem;
+  height: $height;
+  line-height: $height;
   margin: 0;
   padding: 0 2.4rem;
   text-align: center;
   text-decoration: none;
   text-transform: none;
-  transition: background .2s ease-in-out;
+  transition: opacity .2s ease-in-out;
 }
 
 .btn:hover,
@@ -27,6 +34,16 @@ button:hover,
 input[type="submit"]:hover,
 input[type="reset"]:hover,
 input[type="button"]:hover {
-  background-color: #498ae8;
-  color: #fff;
+  color: $textColor;
+  opacity: .8;
+}
+
+/* Disabled
+   ========================================================================== */
+
+.btn.btn-disabled,
+button[disabled] {
+  opacity: .4;
+  cursor: not-allowed;
+  transition: none;
 }
