--- a/src/public/styles/button.scss
+++ b/src/public/styles/button.scss
@@ -20,6 +20,7 @@ input[type="button"] {
   font-size: 1.2rem;
   font-weight: 300;
   height: $height;
+  letter-spacing: normal;
   line-height: $height;
   margin: 0;
   padding: 0 2.4rem;
