--- a/src/public/styles/main.scss
+++ b/src/public/styles/main.scss
@@ -6,13 +6,10 @@ body {
   font-family: 'Open Sans', sans-serif;
 }
 
-.shadow {
-  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .16);
-}
-
 /* Components
    ========================================================================== */
 
 @import 'avatar';
 @import 'button';
 @import 'form';
+@import 'shadow';
