Refactoring some utility classes

--- a/src/public/styles/_avatar.scss
+++ b/src/public/styles/_avatar.scss
@@ -28,7 +28,7 @@ $large : 9.2rem;
    ========================================================================== */
 
 .avatar-initials {
-  color: #fff;
+  color: $white;
   text-align: center;
   text-transform: uppercase;
 }
