--- a/src/public/styles/_tooltip.scss
+++ b/src/public/styles/_tooltip.scss
@@ -29,13 +29,13 @@
 }
 
 .tooltip-menu-link {
+  @include anim(background);
   color: rgba(35, 50, 64, .7);
   display: block;
   font-size: 1.2rem;
   font-weight: 400;
   padding: .6rem 3.6rem;
   text-decoration: none;
-  transition: background .2s ease-in-out;
 }
 
 .tooltip-menu-link:hover {
