--- a/src/public/styles/main.scss
+++ b/src/public/styles/main.scss
@@ -1,3 +1,7 @@
+$blue : rgb(28, 109, 226);
+$white: rgb(255, 255, 255);
+$grey : rgb(189, 193, 197);
+
 /* Base
    ========================================================================== */
 
@@ -11,6 +15,25 @@ body {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
+}
+
+a {
+  color: $blue;
+}
+
+a:hover {
+  color: $blue;
+}
+
+/* Utils
+   ========================================================================== */
+
+@mixin anim($property) {
+  transition: $property .2s ease-in-out;
+}
+
+.round {
+  border-radius: 0.2rem;
 }
 
 /* Components
