Refactoring button styles

--- a/src/public/styles/_button.scss
+++ b/src/public/styles/_button.scss
@@ -1,6 +1,4 @@
-$height: 3.2rem;
-
-/* Default
+/* Primary
    ========================================================================== */
 
 .btn,
@@ -10,16 +8,16 @@ input[type="reset"],
 input[type="button"] {
   @include anim(opacity);
   @extend .round;
+  background: $blue;
   border: none;
-  box-sizing: border-box;
   color: $white;
   cursor: pointer;
   display: inline-block;
   font-size: 1.2rem;
-  font-weight: 300;
-  height: $height;
+  font-weight: 400;
+  height: 3.2rem;
   letter-spacing: normal;
-  line-height: $height;
+  line-height: 3.2rem;
   margin: 0;
   padding: 0 2.4rem;
   text-align: center;
@@ -36,18 +34,10 @@ input[type="button"]:hover {
   opacity: .8;
 }
 
-/* Primary
-   ========================================================================== */
-
-.btn-primary {
-  color: $white;
-  background: $blue;
-}
-
 /* Secondary
    ========================================================================== */
 
-.btn-secondary {
+.btn.btn-secondary {
   color: $white;
   background: $grey;
 }
@@ -60,4 +50,22 @@ button[disabled] {
   opacity: .4;
   cursor: not-allowed;
   transition: none;
+}
+
+.btn.btn-disabled:hover {
+  opacity: .4;
+}
+
+/* Link
+   ========================================================================== */
+
+.btn.btn-link {
+  color: $blue;
+  background: $white;
+}
+
+.btn.btn-link:hover {
+  color: $blue;
+  opacity: 1;
+  text-decoration: underline;
 }
