--- a/src/public/styles/main.scss
+++ b/src/public/styles/main.scss
@@ -2,6 +2,8 @@ $blue : rgb(28, 109, 226);
 $white: rgb(255, 255, 255);
 $grey : rgb(189, 193, 197);
 
+$fontWeight: 400;
+
 /* Base
    ========================================================================== */
 
