--- a/src/public/styles/_button.scss
+++ b/src/public/styles/_button.scss
@@ -14,7 +14,7 @@ input[type="button"] {
   cursor: pointer;
   display: inline-block;
   font-size: 1.2rem;
-  font-weight: 400;
+  font-weight: $fontWeight;
   height: 3.2rem;
   letter-spacing: normal;
   line-height: 3.2rem;
