--- a/src/public/styles/_nav.scss
+++ b/src/public/styles/_nav.scss
@@ -54,8 +54,9 @@
 
 .nav-secondary {
   @extend .shadow-z2;
-  width: 20rem;
+  background: #fff;
   margin: 0 auto;
+  width: 20.8rem;
 }
 
 .nav-secondary-list {
@@ -77,6 +78,7 @@
 }
 
 .nav-secondary-link {
+  @include anim(background);
   display: block;
   color: $blue;
   text-decoration: none;
