Reviews CSS comments

--- a/src/public/styles/_avatar.scss
+++ b/src/public/styles/_avatar.scss
@@ -1,8 +1,11 @@
+/* Avatar
+   ========================================================================== */
+
 .avatar {
   border-radius: 50%;
 }
 
-/* Sizes
+/* Avatar · Sizes
    ========================================================================== */
 
 $small : 3.6rem;
@@ -24,7 +27,7 @@ $large : 9.2rem;
   height: $large;
 }
 
-/* Initials
+/* Avatar · Initials
    ========================================================================== */
 
 .avatar-initials {
@@ -48,7 +51,7 @@ $large : 9.2rem;
   line-height: $large;
 }
 
-/* Icon
+/* Avatar · Icon
    ========================================================================== */
 
 .avatar-icon.avatar-small img {
