--- a/src/public/styles/_cell.scss
+++ b/src/public/styles/_cell.scss
@@ -1,3 +1,6 @@
+/* Cell
+   ========================================================================== */
+
 .cell {
   @extend .round;
   background: $white;
