--- a/src/public/styles/_form.scss
+++ b/src/public/styles/_form.scss
@@ -1,3 +1,6 @@
+/* Form
+   ========================================================================== */
+
 input[type="email"],
 input[type="number"],
 input[type="search"],
