--- a/src/public/styles/_modal.scss
+++ b/src/public/styles/_modal.scss
@@ -1,3 +1,6 @@
+/* Overlay
+   ========================================================================== */
+
 .overlay {
   background: rgba(0, 0, 0, .7);
   height: 100%;
@@ -7,6 +10,9 @@
   width: 100%;
   z-index: 0;
 }
+
+/* Modal
+   ========================================================================== */
 
 .modal {
   @extend .cell;
