--- a/src/public/styles/main.scss
+++ b/src/public/styles/main.scss
@@ -1,12 +1,10 @@
-/* Variables
-   ========================================================================== */
-
 $blue: rgb(28, 109, 226);
 $white: rgb(255, 255, 255);
 $grey: rgb(189, 193, 197);
 $fontWeight: 400;
 
-/* Base
+/* ==========================================================================
+   Base
    ========================================================================== */
 
 body {
@@ -30,7 +28,8 @@ a:hover {
   color: $blue;
 }
 
-/* Utils
+/* ==========================================================================
+   Utils
    ========================================================================== */
 
 @mixin anim($property) {
@@ -41,7 +40,8 @@ a:hover {
   border-radius: 0.2rem;
 }
 
-/* Components
+/* ==========================================================================
+   Components
    ========================================================================== */
 
 @import "avatar";
