--- a/src/public/styles/_button.scss
+++ b/src/public/styles/_button.scss
@@ -1,4 +1,4 @@
-/* Primary
+/* Button
    ========================================================================== */
 
 .btn,
@@ -34,7 +34,7 @@ input[type="button"]:hover {
   opacity: .8;
 }
 
-/* Secondary
+/* Button · Secondary
    ========================================================================== */
 
 .btn.btn-secondary {
@@ -42,7 +42,7 @@ input[type="button"]:hover {
   background: $grey;
 }
 
-/* Disabled
+/* Button · Disabled
    ========================================================================== */
 
 .btn.btn-disabled,
@@ -56,7 +56,7 @@ button[disabled] {
   opacity: .4;
 }
 
-/* Link
+/* Button · Link
    ========================================================================== */
 
 .btn.btn-link {
