--- a/src/public/styles/_nav.scss
+++ b/src/public/styles/_nav.scss
@@ -1,4 +1,4 @@
-/* Primary
+/* Nav · Primary
    ========================================================================== */
 
 .nav-primary {
@@ -49,7 +49,7 @@
   color: rgb(255, 255, 255);
 }
 
-/* Secondary
+/* Nav · Secondary
    ========================================================================== */
 
 .nav-secondary {
