--- a/src/public/styles/_tooltip.scss
+++ b/src/public/styles/_tooltip.scss
@@ -1,3 +1,6 @@
+/* Tooltip
+   ========================================================================== */
+
 .tooltip {
   @extend .cell;
   @extend .shadow-z2;
@@ -8,7 +11,7 @@
   text-align: left;
 }
 
-/* Menu
+/* Tooltip · Menu
    ========================================================================== */
 
 .tooltip-menu {
