--- a/src/public/styles/main.scss
+++ b/src/public/styles/main.scss
@@ -48,6 +48,7 @@ a:hover {
 @import "button";
 @import "cell";
 @import "form";
+@import "icon";
 @import "modal";
 @import "nav";
 @import "shadow";
