Sets icon size in pxs instead of rem

--- a/src/public/styles/_icon.scss
+++ b/src/public/styles/_icon.scss
@@ -15,7 +15,7 @@
 [class^="icon-12-"], [class*=" icon-12-"] {
   font-family: 'ui-kit-12';
   speak: none;
-  font-size: 1.2rem;
+  font-size: 12px;
   font-style: normal;
   font-weight: normal;
   font-variant: normal;
@@ -188,7 +188,7 @@
 [class^="icon-16-"], [class*=" icon-16-"] {
   font-family: 'ui-kit-16';
   speak: none;
-  font-size: 1.6rem;
+  font-size: 16px;
   font-style: normal;
   font-weight: normal;
   font-variant: normal;
