--- a/src/public/styles/_modal.scss
+++ b/src/public/styles/_modal.scss
@@ -34,7 +34,7 @@
 .modal-header h5,
 .modal-header h6 {
   font-size: 1.6rem;
-  font-weight: $fontWeight;
+  font-weight: $regular;
   color: rgb(28, 109, 226);
   text-align: left;
   margin: 0;
