--- a/src/public/styles/_button.scss
+++ b/src/public/styles/_button.scss
@@ -14,7 +14,7 @@ input[type="button"] {
   cursor: pointer;
   display: inline-block;
   font-size: 1.2rem;
-  font-weight: $fontWeight;
+  font-weight: $semiBold;
   height: 3.2rem;
   letter-spacing: normal;
   line-height: 3.2rem;
@@ -62,6 +62,7 @@ button[disabled] {
 .btn.btn-link {
   color: $blue;
   background: $white;
+  font-weight: $regular;
 }
 
 .btn.btn-link:hover {
