--- a/src/public/styles/main.scss
+++ b/src/public/styles/main.scss
@@ -1,7 +1,9 @@
 $blue: rgb(28, 109, 226);
 $white: rgb(255, 255, 255);
 $grey: rgb(189, 193, 197);
-$fontWeight: 400;
+
+$regular: 400;
+$semiBold: 600;
 
 /* ==========================================================================
    Base
