Nav primary should have font weight semi-bold #5

--- a/src/public/styles/_form.scss
+++ b/src/public/styles/_form.scss
@@ -42,7 +42,7 @@ label,
   color: #233240;
   text-align: left;
   opacity: .7;
-  font-weight: $fontWeight;
+  font-weight: $regular;
   font-size: 1.2rem;
   display: block;
 }
