Reviews shadow definitions #5

--- a/src/public/styles/_shadow.scss
+++ b/src/public/styles/_shadow.scss
@@ -2,9 +2,9 @@
    ========================================================================== */
 
 .shadow-z1 {
-  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .2);
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.16);
 }
 
 .shadow-z2 {
-  box-shadow: 0 2px 8px rgba(0, 0, 0, .2);
+  box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.24);
 }
