Button label should keep the same color when focused #5

--- a/src/public/styles/_button.scss
+++ b/src/public/styles/_button.scss
@@ -34,6 +34,14 @@ input[type="button"]:hover {
   opacity: .8;
 }
 
+.btn:focus,
+button:focus,
+input[type="submit"]:focus,
+input[type="reset"]:focus,
+input[type="button"]:focus {
+  color: $white;
+}
+
 /* Button · Secondary
    ========================================================================== */
 
