Forms should have a default max-width of 400px #5

--- a/src/public/styles/_form.scss
+++ b/src/public/styles/_form.scss
@@ -1,6 +1,10 @@
 /* Form
    ========================================================================== */
 
+form {
+  max-width: 40rem;
+}
+
 input[type="email"],
 input[type="number"],
 input[type="search"],
