--- a/src/public/styles/_modal.scss
+++ b/src/public/styles/_modal.scss
@@ -24,8 +24,8 @@
 }
 
 .modal-header {
-  padding: 2.4rem;
   border-bottom: 1px solid rgba(35, 50, 64, .1);
+  padding: 2.4rem;
 }
 
 .modal-header h1,
@@ -55,17 +55,20 @@
 }
 
 .modal-body {
-  padding: 2rem;
+  padding: 2.4rem 4.8rem 2.4rem 2.4rem;
   text-align: left;
 }
 
 .modal-body p {
-  margin: 0;
-  font-weight: 300;
+  color: rgba(35, 50, 64, .8);
+  font-size: 1.2rem;
+}
+
+.modal-body p:last-child {
+  margin-bottom: 0;
 }
 
 .modal-footer {
   padding: 2rem;
   text-align: right;
 }
-
