--- a/src/public/styles/main.scss
+++ b/src/public/styles/main.scss
@@ -51,6 +51,6 @@ a:hover {
 @import "cell";
 @import "form";
 @import "modal";
-@import "nav";
+@import "navigation";
 @import "shadow";
 @import "tooltip";
