Navigation Top: Label's font size should be 1.6 rem #5

--- a/src/public/styles/_navigation.scss
+++ b/src/public/styles/_navigation.scss
@@ -37,6 +37,7 @@
 .nav-top-link {
   @include anim(color);
   color: rgba(255, 255, 255, .5);
+  font-size: 1.6rem;
   font-weight: $semiBold;
   text-decoration: none;
 }
