Sidebar cell should have a rounded border of 2px #5

--- a/src/public/styles/_navigation.scss
+++ b/src/public/styles/_navigation.scss
@@ -57,6 +57,7 @@
    ========================================================================== */
 
 .sidebar {
+  @extend .round;
   @extend .shadow-z2;
   background: #fff;
   margin: 0 auto;
