Background color should be #f4f8ff #5

--- a/src/public/styles/main.scss
+++ b/src/public/styles/main.scss
@@ -10,7 +10,7 @@ $semiBold: 600;
    ========================================================================== */
 
 body {
-  background: #f3f8fe;
+  background: rgb(244, 248, 255);
   font-family: "Open Sans", sans-serif;
   text-rendering: optimizeLegibility;
   -moz-osx-font-smoothing: grayscale;
