--- a/src/public/styles/_form.scss
+++ b/src/public/styles/_form.scss
@@ -18,6 +18,7 @@ select {
   @extend .round;
   margin: 0;
   border: 1px solid rgba(0, 0, 0, .2);
+  font-size: 1.2rem;
   font-weight: $regular;
 }
 
