--- a/src/public/styles/_form.scss
+++ b/src/public/styles/_form.scss
@@ -16,10 +16,11 @@ textarea,
 select {
   @include anim(border);
   @extend .round;
-  margin: 0;
-  border: 1px solid rgba(0, 0, 0, .2);
+  background: $white;
+  border: 1px solid rgba(35, 50, 64, .2);
   font-size: 1.2rem;
   font-weight: $regular;
+  margin: 0;
 }
 
 input[type="email"]:focus,
