Replaces shadow with cell component #5

--- a/src/public/docs/styles/main.css
+++ b/src/public/docs/styles/main.css
@@ -14,7 +14,7 @@
 #buttonTags .page-cell-demo,
 #modal .modal,
 #modalDialog .modal,
-#shadow .page-cell-demo,
+#cell .page-cell-demo,
 #tooltip .page-cell-demo,
 #tooltipMenu .page-cell-demo,
 #icon12x12 .page-cell-demo,
