--- a/src/public/styles/_modal.scss
+++ b/src/public/styles/_modal.scss
@@ -65,7 +65,7 @@
    ========================================================================== */
 
 .modal section {
-  padding: 2.4rem 4.8rem 2.4rem 2.4rem;
+  padding: 2.4rem 4.8rem 5.2rem 2.4rem;
 }
 
 .modal section:empty {
@@ -85,10 +85,18 @@
    ========================================================================== */
 
 .modal footer {
-  padding: 2rem;
+  padding: 1.2rem;
   text-align: right;
 }
 
 .modal footer:empty {
   padding: 0;
+}
+
+.modal footer .btn {
+  margin: 0 .6rem;
+}
+
+.modal footer .btn:last-child {
+  margin-right: 0;
 }
