--- a/src/public/styles/main.scss
+++ b/src/public/styles/main.scss
@@ -38,6 +38,15 @@ a:hover {
   transition: $property .3s ease-in-out;
 }
 
+.centered {
+  left: 50%;
+  position: fixed;
+  top: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  -webkit-transform: translateX(-50%) translateY(-50%);
+  -ms-transform: translateX(-50%) translateY(-50%);
+}
+
 .round {
   border-radius: 0.2rem;
 }
