--- a/src/public/styles/_modal.scss
+++ b/src/public/styles/_modal.scss
@@ -1,14 +1,21 @@
 /* Overlay
    ========================================================================== */
 
-.overlay {
+.backdrop, .overlay {
   background: rgba(0, 0, 0, .7);
   height: 100%;
   left: 0;
-  position: absolute;
   top: 0;
   width: 100%;
   z-index: 0;
+}
+
+.backdrop {
+  position: absolute;
+}
+
+.overlay {
+  position: fixed;
 }
 
 /* Modal
